--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,10 @@ form {
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
 }
 
+.poem strong {
+    color:#a663cc;
+}
+
 footer {
     text-align: center;
     font-size: 13px;
