--- a/src/style.css
+++ b/src/style.css
@@ -24,13 +24,23 @@ h1 {
     text-align: center;
 }
 
-form {
-    padding: 30px;
+.form-wrapper {
+    padding: 15px 20px;
     background-color: white;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
     border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+form {
     display: flex;
-    margin-bottom: 38px;
+}
+
+.hint {
+    line-height: 1.5;
+    margin-top: 5px;
+    font-size: 12px;
+    opacity: 0.6;
 }
 
 .instructions {
@@ -66,6 +76,24 @@ form {
 
 .poem strong {
     color:#a663cc;
+}
+
+.hidden {
+    display: none;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
 
 footer {
